update package name

--- a/p10_preprocessing.ipynb
+++ b/p10_preprocessing.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "142ae9f8-2bfa-4adc-b667-3b63299d96c4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import modules.get_data as get_data\n",
-    "import modules.bot_creation as bc"
+    "import module_luis.get_data as get_data\n",
+    "import module_luis.bot_creation as bc"
    ]
   },
   {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "94fa4905-acb7-47d2-9c8b-d8e2e93a25c8",
    "metadata": {},
    "outputs": [],
@@ -128,10 +128,9 @@
      "name": "stdout",
      "text": [
       "Creating application...\n",
-      "3:13: E231 missing whitespace after ','\n",
       "Created LUIS app Fly Bot\n",
-      "    with ID 793db7af-42c8-46b0-9035-151d578faf36\n",
-      "793db7af-42c8-46b0-9035-151d578faf36 0.1\n"
+      "    with ID 5705e735-228d-430c-94fd-cab67b7f69ae\n",
+      "5705e735-228d-430c-94fd-cab67b7f69ae 0.1\n"
      ]
     }
    ],
@@ -143,18 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "1:5: E225 missing whitespace around operator\n",
-      "<msrest.pipeline.ClientRawResponse object at 0x000001CFA91BEA30>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#operations.VersionsOperations.clone()"
    ]
@@ -166,15 +156,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Adding entities to application...\n",
-      "destinationEntityId c56ec4d7-0f74-47b3-888b-837d577b9ff8 added.\n",
-      "classEntityId d1348987-6a71-4193-8d31-9359796261bb added.\n",
-      "flightEntityId 4ecbad67-db92-4ccb-9bc8-79d2c1c98263 added.\n",
-      "flightEntityId bd32110f-5886-45ec-82db-f842bd2f8586 added.\n",
-      "flightEntityId 789aa8dc-f257-41d5-b7f8-8017efd0b08b added.\n"
+      "destinationEntityId 84cc7ed6-ee97-4384-96bd-49ad76d716ef added.\n",
+      "classEntityId 5648cd91-fbf5-4bbb-80d6-dea0dc544b95 added.\n",
+      "flightEntityId f3e622e5-a593-4788-bd7a-c99083170b1e added.\n",
+      "flightEntityId 4dd298e2-f8dc-40bc-9d48-614f5fce005a added.\n",
+      "flightEntityId 59d5c8cc-8d26-4112-8e2b-3dd447f17426 added.\n"
      ]
     }
    ],
@@ -190,17 +180,45 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Adding intents to application...\n",
-      "Intent BookFlight 31e06e6c-0e7d-4a00-99ed-da0fc8fde692 added.\n"
+      "Intent BookFlight f0690959-bce1-4686-9804-5a5efd1d0ad0 added.\n",
+      "Intent Cancel cacf89b7-3454-4d43-ad2e-2704900c14bc added.\n",
+      "Intent Greeting cd81aa6c-f166-46b6-b874-0783c91dea69 added.\n",
+      "Intent Help 66090d04-3f57-4c96-bc71-2acc72d62bc9 added.\n",
+      "Intent Closing 740c5122-fea8-483d-b1cc-d52ba010f3aa added.\n"
      ]
     }
    ],
    "source": [
     "print(\"Adding intents to application...\")\n",
     "bc.add_intents(app_id, app_version)"
+   ]
+  },
+  {
+   "source": [
+    "on ajoute les entités correspondant à Greeting, Cancel, Help, None..."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "45 example utterance(s) added.\n"
+     ]
+    }
+   ],
+   "source": [
+    "bc.add_utterances_default(app_id, app_version)"
    ]
   },
   {
@@ -213,18 +231,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "3020cd48-4dbf-4f33-9194-54a6440700a7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "Adding intents to utterances...\n",
-      "3\n",
-      "3 example utterance(s) added.\n",
-      "3 example utterance(s) added.\n"
+      "5229\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "100 example utterance(s) added.\n",
+      "29 example utterance(s) added.\n",
+      "5229 example utterance(s) added.\n"
      ]
     }
    ],
@@ -235,16 +305,28 @@
     "    j = (i + 100)\n",
     "    if j > len(list_final):\n",
     "        j = len(list_final)\n",
-    "    bc.add_utterances(app_id, app_version, list_final[i:j])\n",
+    "    bc.add_utterances_flight(app_id, app_version, list_final[i:j])\n",
     "print(\"{} example utterance(s) added.\".format(len(list_final)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0e564777",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Train application...\n",
+      "Waiting 10 seconds for training to complete...\n",
+      "Waiting 10 seconds for training to complete...\n",
+      "Waiting 10 seconds for training to complete...\n",
+      "trained\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Train application...\")\n",
     "bc.train_app(app_id, app_version)"
@@ -252,10 +334,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "68775286-5146-4f00-a685-7bbba5a4b753",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Publish application...\n",
+      "Application published. Endpoint URL: https://westeurope.api.cognitive.microsoft.com/luis/v2.0/apps/5705e735-228d-430c-94fd-cab67b7f69ae\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Publish application...\")\n",
     "bc.publish_app(app_id, app_version)"
