reformat code and add evaluation off line for luis

--- a/p10_analyse_exploratoire.ipynb
+++ b/p10_analyse_exploratoire.ipynb
@@ -1460,8 +1460,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3810jvsc74a57bd0d90b15230f25cbc7571e2ace165d2eb1fe11d289dfebbdd8b285137b96dd2a33",
-   "display_name": "Python 3.8.10 64-bit ('projet10_2021': conda)"
+   "name": "python3",
+   "display_name": "Python 3.7.10 64-bit ('luisAPP2': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1473,7 +1473,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.10"
+  },
+  "interpreter": {
+   "hash": "5578c35141de2a09d1be7d370cc4fd760b0b1172d69cd1e960ff4f2fcf12674a"
   }
  },
  "nbformat": 4,
