--- a/p10_preprocessing.ipynb
+++ b/p10_preprocessing.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "142ae9f8-2bfa-4adc-b667-3b63299d96c4",
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "runtime_key: ef3b354d5d1b42459bf2e2591519cba2\n",
+      "runtime_endpoint: https://westeurope.api.cognitive.microsoft.com/\n"
+     ]
+    }
+   ],
    "source": [
     "import module_luis.get_data as get_data\n",
     "import module_luis.luis_function as lf\n",
@@ -14,7 +22,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6441b2b2-b7a7-4d81-90b4-6cb8f7d52f1c",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
@@ -25,8 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "94fa4905-acb7-47d2-9c8b-d8e2e93a25c8",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "848782e7-239c-421a-83d0-77e9e1698344",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +50,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f283aae8-c7be-4cd5-8ba9-c7791ebd72dd",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">  \n",
@@ -56,7 +60,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "089c7a4c-cb6e-4258-93ee-3e2e6478bf49",
    "metadata": {},
    "source": [
     "*a) Initialisation des paramètres*"
@@ -64,8 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "8034a196-c9d4-4038-98c7-02b8db6013ae",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +76,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "217019cd-ba2d-4089-85cf-e3ad15035097",
    "metadata": {},
    "source": [
     "*b) Chargement du fichier*"
@@ -82,8 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b3e9a391-8ae4-4a47-bddf-a2fc843972cf",
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -94,7 +94,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f93dbdc8",
    "metadata": {},
    "source": [
     "On le transforme pour qu'il soit utilisable dans luis :"
@@ -102,19 +101,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "0f162413",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "list_final = get_data.transform_data(data_list)\n",
-    "list_train = list_final[99:]\n",
-    "list_test = list_final[0:99]"
+    "list_train = list_final[:-99]\n",
+    "list_test = list_final[-99:]"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a9f1f5be",
    "metadata": {},
    "source": [
     "### Creation de l'application luis, des intentions et des utterances :"
@@ -122,18 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "d1fbc9ba-c2ad-40b4-b2b1-93fa94f847d4",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Creating application...\n",
       "Created LUIS app Fly Bot\n",
-      "    with ID 9a4d53de-3156-4e7a-80ec-30803825ce2f\n",
-      "9a4d53de-3156-4e7a-80ec-30803825ce2f 0.1\n"
+      "    with ID 482c7139-dbf6-4560-be9b-821f34dc99b9\n",
+      "482c7139-dbf6-4560-be9b-821f34dc99b9 0.1\n"
      ]
     }
    ],
@@ -145,20 +141,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "e5129acf-8ba2-476d-a5d0-32889ed5963e",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Adding entities to application...\n",
-      "destinationEntityId a4b5d7d5-c8be-4b34-8738-f1855aa82f12 added.\n",
-      "classEntityId 429dd0f9-ecba-4626-84f6-8a3bc803d6bf added.\n",
-      "flightEntityId 2b23f6b1-739b-4687-823c-013850bdb4ad added.\n",
-      "flightEntityId eb5c2cff-7834-4215-a7b8-47c8f00619e7 added.\n",
-      "flightEntityId a4910fa0-e380-4527-a007-7e896b7d3a1b added.\n"
+      "destinationEntityId abdfcf8f-3f74-4622-85c7-46d977c951f9 added.\n",
+      "classEntityId 3af1b04a-4567-46de-bdae-3c3bf2a8f987 added.\n",
+      "flightEntityId 66298b19-4351-4013-9470-57d23d3a68c2 added.\n",
+      "flightEntityId 781d33a4-0a9a-47ae-97c8-928195b2e533 added.\n",
+      "flightEntityId c2320e13-3bd7-42f7-af2a-42b3916f1e79 added.\n",
+      "flightEntityId [<azure.cognitiveservices.language.luis.authoring.models.prebuilt_entity_extractor_py3.PrebuiltEntityExtractor object at 0x00000248002CCDC0>] added.\n"
      ]
     }
    ],
@@ -169,20 +165,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "c6f45fa3-692a-4124-9dfa-f6b56a43de91",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Adding intents to application...\n",
-      "Intent BookFlight 9c0bef58-6c19-4da7-b525-ba5a0aaa9c13 added.\n",
-      "Intent Cancel b2d81b0e-cfba-463d-b6ad-3abdde5f7313 added.\n",
-      "Intent Greeting d4f3d899-6601-4d53-bffe-fe382a035c26 added.\n",
-      "Intent Help d1fb3781-8d1e-465a-a7ba-ae3a8dd942ce added.\n",
-      "Intent Closing dd9c2e8f-15f5-43ef-8052-7cdde5661917 added.\n"
+      "Intent BookFlight a2da9561-9d2f-44e9-8305-44fa62ded6c0 added.\n",
+      "Intent Cancel 7208b408-49f0-4c71-8871-05d3cce6cdbc added.\n",
+      "Intent Greeting f51c9d09-2df7-4835-b0d7-2926f6ab1406 added.\n",
+      "Intent Help ecddd9f0-0ba7-4892-a6e4-f07fe3c5bb8c added.\n",
+      "Intent Closing 62f82277-edca-4945-894a-f8c306d6dc94 added.\n"
      ]
     }
    ],
@@ -193,7 +188,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3099e295",
    "metadata": {},
    "source": [
     "on ajoute les entités correspondant à Greeting, Cancel, Help, None..."
@@ -201,13 +195,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "aa61411c",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "45 example utterance(s) added.\n"
      ]
@@ -222,7 +215,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a17f7ae",
    "metadata": {},
    "source": [
     "On les ajoute 100 par 100 sinon Luis refuse autant de requetes en gratuit : "
@@ -230,16 +222,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "3020cd48-4dbf-4f33-9194-54a6440700a7",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Adding intents to utterances...\n",
-      "5129 example utterance(s) added.\n"
+      "5130 example utterance(s) added.\n"
      ]
     }
    ],
@@ -256,13 +247,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "0e564777",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Train application...\n",
       "Waiting 10 seconds for training to complete...\n",
@@ -279,12 +269,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Evaluate application...\n"
      ]
@@ -298,16 +288,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "68775286-5146-4f00-a685-7bbba5a4b753",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Publish application...\n",
-      "Application published. Endpoint URL: https://westeurope.api.cognitive.microsoft.com/luis/v2.0/apps/9a4d53de-3156-4e7a-80ec-30803825ce2f\n"
+      "Application published. Endpoint URL: https://westeurope.api.cognitive.microsoft.com/luis/v2.0/apps/482c7139-dbf6-4560-be9b-821f34dc99b9\n"
      ]
     }
    ],
@@ -318,7 +307,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4cd4424-f6e6-454d-9a46-ebdd6ba129d6",
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">  \n",
@@ -330,14 +318,14 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "67a56b7c-99c3-4b4a-8b1e-341f830a8473",
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "luisAppID: 5705e735-228d-430c-94fd-cab67b7f69ae\nluisSlotName: production\n"
+      "luisAppID: 5705e735-228d-430c-94fd-cab67b7f69ae\n",
+      "luisSlotName: production\n"
      ]
     }
    ],
@@ -358,14 +346,17 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "6335bcf1-ff8e-48cd-b266-b9d0af412c6e",
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "Top intent: BookFlight\nSentiment: None\nIntents: \n\t\"BookFlight\"\nEntities: {'or_city': ['paris'], 'dst_city': ['berlin'], 'budget': ['2020'], 'str_date': ['september'], 'end_date': ['2nd october']}\n"
+      "Top intent: BookFlight\n",
+      "Sentiment: None\n",
+      "Intents: \n",
+      "\t\"BookFlight\"\n",
+      "Entities: {'or_city': ['paris'], 'dst_city': ['berlin'], 'budget': ['2020'], 'str_date': ['september'], 'end_date': ['2nd october']}\n"
      ]
     }
    ],
@@ -376,16 +367,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cbd9013-d40c-4178-bf6d-650dc8692edc",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "a0aeebaa97e811681c1fbec8c49882f6a9a22fb7d7945e75bdc5088b795c0c91"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.10 64-bit ('luisIntegration': conda)"
+   "display_name": "Python 3.8.10 64-bit ('luisIntegration': conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -398,9 +391,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.10"
-  },
-  "interpreter": {
-   "hash": "a0aeebaa97e811681c1fbec8c49882f6a9a22fb7d7945e75bdc5088b795c0c91"
   }
  },
  "nbformat": 4,
